docs/versions/v1.2.2/기획서.md
# mobimobi 기획서 v1.2.2

> 마비노기 숙제 트래커  
> 최종 수정일: 2026-05-28

---

## 1. 프로젝트 개요

### 1.1 서비스명
**mobimobi** (모비모비)

### 1.2 서비스 소개
마비노기 MMORPG 유저를 위한 일일/주간 숙제 관리 웹 애플리케이션.  
서버별 다수의 캐릭터를 등록하고, 각 캐릭터가 매일/매주 수행해야 하는 콘텐츠를 체크리스트 형태로 관리한다.

### 1.3 대상 유저
- 마비노기를 플레이하는 유저
- 여러 캐릭터를 운영하며 숙제를 체계적으로 관리하고 싶은 유저
- 모바일 환경에서 빠르게 숙제 현황을 확인하고 싶은 유저

### 1.4 핵심 가치
| 항목 | 설명 |
|------|------|
| **편의성** | 모바일 퍼스트 UI, 한 화면에서 전체 숙제 현황 파악 |
| **자동 리셋** | 매일 오전 6시(KST) 일간 / 매주 월요일 오전 6시(KST) 주간 자동 초기화 |
| **멀티 캐릭터** | 서버별 최대 6캐릭터, 8개 서버 지원 |
| **데이터 안전** | Google 계정 로그인 시 Cloud Firestore 동기화, 비로그인 시 localStorage 저장 |

### 1.5 서비스 URL
- **프로덕션**: https://mobi-service.vercel.app
- **Dev 프리뷰**: https://mobi-service-git-dev-yesica-kim-s-projects.vercel.app
- **GitHub**: https://github.com/yesica-kim/mobi-service

---

## 2. 기술 스택

| 구분 | 기술 |
|------|------|
| 프레임워크 | Next.js 14 (App Router) |
| 언어 | TypeScript |
| 스타일링 | Tailwind CSS |
| 인증 | Firebase Authentication (Google OAuth) |
| 데이터베이스 | Cloud Firestore (로그인 시) / localStorage (비로그인 시) |
| 드래그앤드롭 | @dnd-kit/core, @dnd-kit/sortable |
| 아이콘 | lucide-react |
| 배포 | Vercel (GitHub main 브랜치 production, dev 브랜치 preview) |

---

## 3. 서비스 구조

### 3.1 화면 구성

```
로그인 화면
  |-- Google 로그인
  |-- 비로그인으로 계속하기
  
메인 대시보드
  |-- 헤더 (로고, 업데이트 노트, 설정)
  |-- 서버 탭
  |-- 보기 전환 (캐릭터 전체 보기 / 캐릭터별로 보기)
  |-- 캐릭터 탭 (캐릭터별로 보기에서 표시)
  |-- 숙제 툴바 (프리셋 관리)
  |-- 주간 리셋 카운트다운
  |-- 진행률 바
  |-- 카테고리 탭 (전체/일일/주간/구매/물물교환/임무게시판/이벤트)
  |-- 카드 리스트
  |-- 푸터

관리자 페이지 (/ctrl-a7x9k2m)
  |-- 관리자 권한 확인
  |-- 기본 숙제/구매/물물교환/임무게시판 카드 CRUD
  |-- 기본 카드 드래그 정렬 및 메타 배지 미리보기
  |-- Dev 저장 (Firestore draft)
  |-- 실섭 업로드 (Firestore published + history)
  |-- 히스토리 확인 및 롤백
```

### 3.2 데이터 흐름

```
[사용자 조작] 
    --> useAppState (상태 관리 Hook)
        --> persist (데이터 저장)
            --> localStorage (비로그인)
            --> Firestore (로그인)
        --> applyResets (리셋 체크)
            --> 매일 06:00 KST 일간 리셋
            --> 매주 월 06:00 KST 주간 리셋

[기본 카드 로드]
    --> dev/localhost: Firestore draft -> published -> 코드 기본값
    --> production: Firestore published -> 코드 기본값
```

---

## 4. 서버 & 캐릭터 구조

### 4.1 서버 목록 (8개)
몰리, 알리사, 메이븐, 라사, 칼릭스, 데이안, 아이라, 던컨

### 4.2 캐릭터 정보
| 필드 | 설명 |
|------|------|
| server | 소속 서버 (ServerName) |
| name | 캐릭터 닉네임 |
| mainClass | 메인 클래스 계열 (전사/궁수/마법사/힐러/음유시인/도적) |
| subClass | 세부 직업 |

### 4.3 클래스 계열
| 계열 | 세부 직업 |
|------|----------|
| 전사 계열 | 기사, 전사, 대검전사, 검술사 |
| 궁수 계열 | 궁수, 석궁사수, 장궁병 |
| 마법사 계열 | 전격술사, 마법사, 화염술사, 빙결술사 |
| 힐러 계열 | 암흑술사, 힐러, 사제, 수도사 |
| 음유시인 | 음유시인, 댄서, 악사 |
| 도적 | 도적, 격투가, 듀얼블레이드 |

### 4.4 제한 사항
- 서버당 최대 6캐릭터 등록 가능

---

## 5. 숙제 카테고리

### 5.1 일일/주간 숙제 (HomeworkItem)
- 체크박스 기반 완료 체크 (다중 체크박스 지원, 최대 10개)
- 보상 정보 표시
- 일간(daily) / 주간(weekly) 구분

### 5.2 구매 (ShopItem - purchase)
- NPC 상점 구매 아이템 관리
- 지역, NPC, 일간/주간 구분
- 완료 여부 체크박스

### 5.3 물물교환 (ShopItem - trade)
- NPC 물물교환 아이템 관리
- 구매와 동일한 구조

### 5.4 임무게시판 (ScrollItem)
- 스크롤 타입: 제작, 채집, 요리, 토벌
- 일간/주간 구분
- 지역별 분류 (8개 지역)
- 다중 체크박스 (기본 3개, 최대 10개)
- 재료 정보 (토벌은 재료 숨김)
- 보상 정보

### 5.5 이벤트 (준비 중)
- 향후 업데이트 예정

---

## 6. 범위(Scope) 개념

| 범위 | 설명 |
|------|------|
| **캐릭터** (character) | 해당 캐릭터에만 적용. 캐릭터별 독립 체크. |
| **서버** (server) | 같은 서버의 모든 캐릭터에 공유. 한 캐릭터에서 체크하면 같은 서버 다른 캐릭터도 체크됨. |

- 숙제/구매/물물교환 카드에 범위 설정 가능
- 즐겨찾기는 모든 서버/캐릭터에 공통 적용한다. 캐릭터/서버 탭을 이동해도 같은 카드의 즐겨찾기 상태가 동일하게 유지된다.

---

## 7. 리셋 규칙

| 주기 | 시각 | 대상 |
|------|------|------|
| 일간 리셋 | 매일 오전 06:00 KST | 일간 숙제, 일간 구매/물물교환, 일간 임무게시판 |
| 주간 리셋 | 매주 월요일 오전 06:00 KST | 주간 숙제, 주간 구매/물물교환, 주간 임무게시판 |

- 리셋 시 completedCount = 0 또는 completed = false로 초기화
- 즐겨찾기, 카드 순서, 카드 내용은 리셋 대상이 아님

---

## 8. 인증 & 데이터 저장

### 8.1 인증 방식
| 방식 | 설명 |
|------|------|
| Google 로그인 | Firebase Auth를 통한 Google OAuth |
| 비로그인 (게스트) | localStorage 기반, 브라우저 한정 |

### 8.2 데이터 저장
| 모드 | 저장소 | 특징 |
|------|--------|------|
| 로그인 | Cloud Firestore | 기기 간 동기화 가능 |
| 비로그인 | localStorage (`mabimobi_data`) | 브라우저 한정, 쿠키 삭제 시 유실 가능 |

### 8.3 데이터 백업
- **내보내기**: JSON 파일로 전체 데이터 다운로드
- **가져오기**: JSON 파일 업로드로 데이터 복원
- 로그아웃 시 경고 모달 표시 (데이터 백업 권장)

### 8.4 운영 환경 구분
- production은 `mobi-service.vercel.app`에서 제공한다.
- dev 프리뷰는 Vercel dev 브랜치 URL에서 제공한다.
- dev 프리뷰에서는 헤더 `mobimobi`가 레드로 표시되고 `dev` 태그가 붙는다.
- Firebase Authentication Authorized domains에 dev 프리뷰 도메인이 등록되어 있어야 Google 로그인이 동작한다.

### 8.4.1 업데이트 노트 운영 정책
- 업데이트 노트는 dev/production 모두 사용자가 확인하는 화면으로 본다.
- 사용자에게 직접 영향이 없는 관리자 페이지 변경사항은 업데이트 노트에 노출하지 않는다.
- 관리자 페이지 관련 작업은 `docs/변경로그.md`, `docs/작업현황.md`, `docs/로드맵.md`에만 기록한다.
- 기존 업데이트 노트에 포함된 관리자 페이지 관련 문구는 제거한다.

### 8.5 신규 사용자 진입
- 신규 비로그인 사용자 또는 Google 계정 최초 로그인 사용자는 기본 카드가 없는 빈 숙제 리스트로 시작한다.
- 빈 상태에서는 `+ 숙제 추가`로 직접 리스트를 만들 수 있다.
- 사용자가 원하면 빈 상태의 `기본 숙제 설정 불러오기` 버튼으로 관리자 published 기본 카드 리스트를 불러올 수 있다.

---

## 9. 프리셋 시스템

### 9.1 기본 프리셋
- "기본 숙제 설정" 프리셋이 기본 제공
- 기본 프리셋은 관리자 기본 카드 published 데이터를 기준으로 구성된다.
- 사용자가 직접 만든 빈 리스트 또는 커스텀 리스트와 별개로 필요할 때 불러올 수 있다.

### 9.2 빈 리스트로 시작
- `빈 리스트로 시작` 버튼으로 현재 카드 목록을 비우고 새 리스트를 직접 구성할 수 있다.
- 기존 카드가 있는 상태에서는 저장 여부를 묻는 모달을 먼저 표시한다.
- 저장 선택 시 현재 리스트를 프리셋으로 저장한 뒤 빈 리스트로 전환한다.
- 삭제 불가

### 9.3 리스트 저장/불러오기
- `현재 리스트 저장` 버튼으로 현재 캐릭터의 숙제/구매/물물교환/임무게시판 구성을 저장한다.
- `저장한 리스트` 버튼으로 저장된 리스트를 불러온다.
- 프리셋 전환 시 기존 캐릭터의 즐겨찾기/체크 상태는 `savedItemStates` 기준으로 최대한 보존한다.
- completedCount/completed는 프리셋 구조 저장 대상이 아니지만, 동일 카드 매칭 시 복원 대상이 될 수 있다.

### 9.4 백업/복원
- `백업/복원` 버튼은 모달을 열고, 모달에서 `백업 파일 저장`과 `백업 파일 가져오기`를 제공한다.
- 프리셋을 JSON 파일로 내보내기/가져오기 가능
- 다른 사용자 또는 다른 기기와 숙제 구성 공유 가능

---

## 10. 카드 동기화 규칙

### 10.1 전체 캐릭터 동기화 항목
다음 작업은 모든 캐릭터에 동일하게 반영됨 (인덱스 기반 매칭):
- 숙제/구매/물물교환/임무게시판 카드 **추가**
- 숙제/구매/물물교환/임무게시판 카드 **수정** (이름, 보상, 주기, 범위 등)
- 숙제/구매/물물교환/임무게시판 카드 **삭제**
- 숙제/구매/물물교환/임무게시판 카드 **순서 변경**

### 10.2 공통/독립 상태 항목
- **즐겨찾기** (isFavorite): 모든 서버/캐릭터 공통
- **카드 순서**: 숙제/구매/물물교환/임무게시판 및 전체 탭 통합 순서를 모든 서버/캐릭터 공통 기준으로 유지
- **완료 체크** (completedCount / completed): 캐릭터별 독립. 단, 서버 범위 카드는 같은 서버 캐릭터에 공유
- 카드 추가/삭제/정렬 후 새로고침해도 사용자가 저장한 순서와 삭제 상태를 유지한다.
- 로그인 상태에서 localStorage와 Firestore 데이터가 서로 다를 경우 `clientUpdatedAt` 기준 최신 데이터를 우선 사용한다.

### 10.3 기본 카드 운영
- 기본 카드는 코드 상수와 Firestore 기본 카드 문서를 함께 사용한다.
- 관리자 페이지에서 `Dev 저장`을 누르면 Firestore `defaultCards/draft`에 저장된다.
- 관리자 페이지에서는 숙제/구매/물물교환/임무게시판 기본 카드 순서를 직접 드래그 정렬할 수 있다.
- 관리자 카드 목록에서는 일간/주간, 범위, 지역, 스크롤 타입, 보상/NPC/재료 메타를 배지/태그 형태로 미리 확인할 수 있다.
- production 사용자는 Firestore `defaultCards/published`를 우선 사용한다.
- `실섭 업로드` 시 `published`에 반영하고 `defaultCardsHistory`에 히스토리를 남긴다.
- 기본 카드 동기화 시 사용자가 직접 만든 커스텀 카드가 삭제되거나 덮어써지지 않도록 보존한다.
- 기본 카드 동기화는 사용자가 변경한 카드 순서를 보존한다. 신규 기본 카드는 기존 사용자 순서를 밀어내지 않고 누락 카드로만 보정한다.
- 사용자가 삭제한 기본 카드는 `deletedDefaultItems`에 기록해 새로고침, 로그인, 기본 카드 마이그레이션 후에도 다시 자동 생성되지 않도록 한다.

### 10.4 신규 기본 카드 사용자 선택 동기화 후보
- 목표 버전: v1.3.3 후보
- 관리자 페이지에서 새 기본 카드를 추가하고 실섭에 반영해도, 기존 사용자의 현재 숙제 리스트에 자동으로 추가하지 않는다.
- 사용자가 로그인, 새로고침, 페이지 재진입 등으로 최신 `defaultCards/published`를 읽었을 때, 현재 리스트에 없는 신규 기본 카드가 있으면 `추가된 기본 카드` 안내 모달을 보여준다.
- 신규 기본 카드 안내 모달은 추가 가능한 카드 목록을 체크박스로 보여준다.
- 모달에는 `전체 체크`, `체크 해제`, `선택한 카드 추가`, `닫기` 액션을 제공한다.
- 사용자가 아무 카드도 선택하지 않은 경우에는 `닫기`만 눌러 모달을 닫을 수 있다.
- `닫기`로 넘긴 카드는 같은 published 버전/카드 ID 기준으로 반복해서 뜨지 않도록 무시 상태를 저장하는 방식을 검토한다.
- 사용자가 나중에 추가하고 싶을 때를 위해 숙제 설정 영역에 `기본 숙제 카드 보기` 버튼을 추가한다.
- `기본 숙제 카드 보기`에서는 관리자 기본 카드 전체 목록을 보여준다.
- 현재 사용자의 리스트에 이미 노출 중인 기본 카드는 체크된 상태로 표시한다.
- 현재 사용자의 리스트에 없는 기본 카드는 체크 해제된 상태로 표시한다.
- 사용자는 이 화면에서 체크/체크 해제를 통해 기본 카드의 노출 여부를 직접 관리할 수 있다.
- 체크한 기본 카드는 현재 리스트에 추가하고, 체크 해제한 기본 카드는 현재 리스트에서 숨김 또는 제거한다.
- 사용자가 직접 추가한 커스텀 카드는 `기본 숙제 카드 보기`의 체크/해제 대상이 아니며 삭제되거나 덮어써지지 않는다.
- 기본 카드 노출 여부는 카드 ID 기준으로 저장하는 것을 우선 검토한다. 카드명 변경만으로 사용자의 선택 상태가 깨지지 않도록 한다.
- 기존 즐겨찾기/체크 상태는 가능한 한 유지한다. 다시 추가한 기본 카드가 과거에 사용된 적 있으면 savedItemStates 기준 복원을 검토한다.

---

## 11. 향후 계획

- 이벤트 탭 구현
- PWA (Progressive Web App) 지원
- 알림/푸시 기능
- 데이터 분석 및 통계 대시보드
- 관리자 기본 카드 CRUD/히스토리 QA 안정화
- v1.3.0 후보: 관리자가 등록한 기본/추천 리스트를 사용자가 선택해서 현재 리스트로 불러오기
- v1.3.2 후보: 사용자 업데이트 노트에서 관리자 페이지 관련 문구를 제외하고 앞으로도 노출하지 않는 운영 정책 유지
- v1.3.2 후보: `채집` 태그 색상을 `주간` 태그와 겹치지 않도록 라임 계열로 변경
- v1.3.2 후보: 캐릭터 전체 보기/캐릭터별 보기에서 캐릭터 숙제 전체 체크 기능 추가
- v1.3.2 후보: 캐릭터 전체 보기에서 카드 전체 체크 시 모든 캐릭터의 해당 카드 체크 기능 추가
- v1.3.2 후보: 체크박스 완료 횟수(`1/10`) 대신 남은 횟수를 보여주는 표기 방식 검토
- v1.3.2 후보: `현재 리스트 저장` 시 즐겨찾기/체크 상태까지 저장하고 기본 카드/사용자 추가 카드의 저장-불러오기 상태 복원 정합성 개선
- v1.3.2 후보: 카드 보상 태그가 3개 이상이면 접어서 표시하고 펼침/접음으로 전체 태그를 확인하는 기능 추가
- v1.3.3 후보: 관리자 기본 카드가 실섭 반영되어도 자동 추가하지 않고 새로고침/로그인 시 신규 기본 카드 안내 모달에서 사용자가 선택 추가하는 기능 추가
- v1.3.3 후보: `기본 숙제 카드 보기`에서 전체 기본 카드 목록을 확인하고 체크/해제로 기본 카드 노출 여부를 관리하는 기능 추가
